--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,9 +3,9 @@
 <%= link_to "Create New Portfolio", new_portfolio_path %>
 
 <% @portfolio_items.each do |item| %>
-  <p><%= item.title %></p>
+  <p><%= link_to item.title, portfolio_path(item) %></p>
   <p><%= item.subtitle %></p>
   <p><%= item.body %></p>
   <%= image_tag item.thumb_image unless item.thumb_image.nil? %>
-  <p><%= link_to "Edit", edit_portfolio_path(item.id) %></p>
+  <p><%= link_to "Edit", edit_portfolio_path(item) %></p>
 <% end %>
