--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,5 +7,9 @@
   <p><%= item.subtitle %></p>
   <p><%= item.body %></p>
   <%= image_tag item.thumb_image unless item.thumb_image.nil? %>
-  <p><%= link_to "Edit", edit_portfolio_path(item) %></p>
+  <p>
+    <%= link_to "Edit", edit_portfolio_path(item) %>
+    <%= link_to "Delete", portfolio_path(item), method: :delete, data: {confirm: "Are you sure?"} %>
+
+  </p>
 <% end %>
