--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -20,8 +20,8 @@
     <%= login_helper %>  
 
     <%= yield %>
-    <% if session[:source] %>
-      <p>Thank you for visiting me from <%= session[:source] %>.</p>
-    <% end %>  
+    
+    <%= session_helper("application") %>
+
   </body>
 </html>
