--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p><%= number_to_phone 555773345 %></p>
+<p><%= number_to_currency 10 %></p>
+<p><%= number_to_percentage 12.5 %></p>
+<p><%= number_with_delimiter 12313513 %></p>
