Integrated new gem into rails app for copyright

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,11 @@
     <%= login_helper %>  
 
     <%= yield %>
-
+    
     <%= session_helper("application") %>
+    
+    <p>
+      <%= copyrights_generator %>
+     </p> 
   </body>
 </html>
