--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -24,7 +24,9 @@
 
     <%= render "shared/nav", location: "bottom" %>
 
-
+    <p>
+      <%= copyrights_generator %>
+     </p> 
 
   </body>
 </html>
