--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -23,5 +23,9 @@
     
     <%= session_helper("application") %>
 
+    <p>
+      <%= copyrights_generator %>
+     </p> 
+     
   </body>
 </html>
