--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome.</h1>
+  <p class="lead">Software devalopment process should not be a secret process, when I start with a new project my goal is not only to deliver a well crafted product but also make sure that communication on every step of the development is excellent.</p>
   <p class="lead">
     <%= link_to "About me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
