Edit user form styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,3 +161,16 @@ body {
   }
 }
 
+
+/*
+ * Custom styles
+ */
+
+.card-block{
+  color:black;
+  text-align: left;
+}
+
+.auth-links a{
+  color:black;
+}
