Finished initial styling of devise pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -169,8 +169,19 @@ body {
 .card-block{
   color:black;
   text-align: left;
+  padding: 1rem;
 }
 
 .auth-links a{
   color:black;
+}
+
+.register-text{
+  text-align: right;
+}
+
+.login > .card{
+  width: 22 rem;
+  margin: 0 auto;
+  float: none;
 }
