--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,20 +14,8 @@
   </head>
 
   <body>
-
-    <!-- Starting a nav -->
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
-    <!-- ending nav -->
+  
+    <%= render "shared/blog_nav", location: "bottom" %>
 
     <div class="blog-header">
       <div class="container">
@@ -43,7 +31,7 @@
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
     
-        <%= login_helper %>  
+        
     
         <%= yield %>
     
@@ -81,7 +69,7 @@
           </div>
         </div><!-- /.blog-sidebar -->
 
-        <%= render "shared/nav", location: "bottom" %>
+        
 
 
         <!-- Start of footer -->
