--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,13 +14,14 @@
   </head>
 
   <body>
-  
+
     <%= render "shared/blog_nav", location: "bottom" %>
 
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
 
@@ -69,19 +70,14 @@
           </div>
         </div><!-- /.blog-sidebar -->
 
-        
-
-
-        <!-- Start of footer -->
-        <footer class="blog-footer">
-          <p>
-            <%= copyrights_generator %>
-          </p> 
-        </footer>
-        <!-- End of footer -->
-        
-
       </div>
+      <!-- Start of footer -->
+      <footer class="blog-footer">
+        <p>
+          <%= copyrights_generator %>
+        </p> 
+      </footer>
+      <!-- End of footer -->
     </div>
     <!-- end of container elements -->
   </body>
