--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap';
+@import "font-awesome";
 
 /*
  * Globals
@@ -167,3 +168,10 @@ h6, .h6 {
   margin-bottom: 0;
 }
 
+/*
+ * CUSTOM STYLES
+ */
+
+ .social-links li {
+  font-size: 2.5em;
+ }
