--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,15 +1,31 @@
-<%= image_tag @portfolio_item.main_image %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title %></h1>
 
-<h1><%= @portfolio_item.title %></h1>
+      <hr>
 
-<em><%= @portfolio_item.subtitle %></em>
+      <em><%= @portfolio_item.subtitle %></em>
+      <p><%= @portfolio_item.body %></p>
+      <hr>
+      <h2>Portfolio technologies</h2>
+      <% @portfolio_item.technologies.each do |technology| %>
+        <p>
+          <%= technology.name %>
+        </p>
+      <% end %>
+    </div>
+  </div>
 
-<p><%= @portfolio_item.body %></p>
+</div>
 
 
-<h1>Portfolio technologies</h1>
-<% @portfolio_item.technologies.each do |technology| %>
-  <p>
-    <%= technology.name %>
-  </p>
-<% end %>
+
+
+
+
+
+
