Updates styles for portfolio forms

--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,31 +1,38 @@
 <%= form_with(model: portfolio_item, local: true) do |form| %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, id: :portfolio_title, class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :portfolio_title %>
+      <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :subtitle, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, class: 'form-control', rows: 10 %>
+      </div>
+    </div>
+
+    <div class="col-md-12">
+      <hr>
+      <h2>Technologies used:</h2>
+      <div>
+        <%= form.fields_for :technologies do |tech_form| %>
+          <div class="form-group">
+            <%= tech_form.label :name %>
+            <%= tech_form.text_field :name, class: 'form-control' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    
   </div>
-
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_field :subtitle %>
-  </div>
-
-    <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |tech_form| %>
-      <li>
-        <%= tech_form.label :name %>
-        <%= tech_form.text_field :name %>
-      </li>
-    <% end %>
-
-  </ul>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="actions">
+      <%= form.submit "Save portfolio item", class: 'btn btn-primary btn-block' %>
+    </div>
 <% end %>
