--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
-<h1>About page</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+
+<h1>About me</h1>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag 'profile.jpg', width: 300, alt: 'prifile picture' %>
+  </div>
+  <div class="col-md-8">
+    <p>Some really interesting information about me</p>
+  </div>
+</div>
+
+
