--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,6 +1,6 @@
  <div class="mastfoot">
   <div class="inner">
-    <p>
+    <p class="app-footer">
       <%= copyrights_generator %>
     </p>
   </div>
