--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -17,10 +17,17 @@
           <%= technology.name %>
         </p>
       <% end %>
+
+      <% if logged_in?(:site_admin) %>
+        <div class="col-md-12">
+          <%= link_to "Edit item", edit_portfolio_path(@portfolio_item), class: 'btn btn-warning' %>
+        </div>
+      <% end %>
+
     </div>
   </div>
 
-</div>
+</div
 
 
 
