--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -22,6 +22,8 @@
     
     <%= session_helper("application") %>
 
+    <%= alerts %>
+
     <%= render 'shared/portfolio_footer' %>
      
   </body>
