--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,6 +2,9 @@
   <h2>
     <%= @blog.title %>
   </h2>
+  <div>
+    <%= @blog.topic.title unless @blog.topic.nil? %>
+  </div>
   <p>
     <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> 
   </p>
