--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -24,6 +24,14 @@
     %>
   </div>
 
+  <div class="from-group">
+    <%= form.label :status, 'Draft' %>
+    <%= form.radio_button :status, "draft", checked: (blog.status=='draft') %>
+
+    <%= form.label :status, 'Published' %>
+    <%= form.radio_button :status, "published",checked: (blog.status=='published') %>
+  </div>
+
   <div class="form-group">
     <%= form.text_area :body, class: 'form-control', rows: 15, placeholder: 'Content' %>
   </div>
