--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -3,12 +3,15 @@
     <h4>About</h4>
     <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
-  <div class="sidebar-module">
-    <h4>Topics</h4>
-    <% @sidebar_topics.each do |topic| %>
-      <p><%= link_to topic.title, topic_path(topic) %></p>
-    <% end %>
-  </div>
+
+  <% unless @sidebar_topics.nil? %>
+    <div class="sidebar-module">
+      <h4>Topics</h4>
+      <% @sidebar_topics.each do |topic| %>
+        <p><%= link_to topic.title, topic_path(topic) %></p>
+      <% end  %>
+    </div>
+   <% end %> 
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
