Updated source tracking feature

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,8 @@
     <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
   </div>
 
+  <%= session_helper("alert alert-primary blog-sidebar-source") %>
+
   <% unless @sidebar_topics.nil? %>
     <div class="sidebar-module">
       <h4>Topics</h4>
