Implemented favicons on all layouts

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -8,7 +8,7 @@
     <meta neme="keywords" content="<%= @seo_keywords %>">
 
     <%= csrf_meta_tags %>
-
+    <%= favicon_link_tag 'favicons/favicon.ico' %>
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
