--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <title><%= @page_title %></title>
 
     <meta neme="keywords" content="<%= @seo_keywords %>">
-
+    <%= favicon_link_tag 'favicons/favicon.ico' %>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
