Implemented style changes for about and contact pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,3 +222,19 @@ body {
 .tech-news > .card {
   padding: 15px;
 }
+
+.about-card-container{
+  color:black;
+  margin-top: 90px
+}
+.about-card-container h1{
+  text-align: center;
+}
+.about-card-container a {
+  color:blue;
+}
+.about-card-container > .card{
+  text-align: left;
+  padding: 30px;
+
+}
