--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,17 @@
 
-<h1>About me</h1>
-
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag 'profile.jpg', width: 300, alt: 'prifile picture' %>
-  </div>
-  <div class="col-md-8">
-    <p>Some really interesting information about me</p>
+<div class="about-card-container">
+  <div class="card">
+    <h1>About me</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag 'profile.jpg', width: 250, alt: 'prifile picture' %>
+      </div>
+      <div class="col-md-8">
+        <p>Some really interesting information about me</p>
+      </div>
+    </div>
   </div>
 </div>
+
 
 
