--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,21 +1,23 @@
+<div class="about-card-container">
+  <div class="card">
+    <h1> Would you like to work together? </h1>
+    <hr />
 
-<h1> Would you like to work together? </h1>
-<hr />
-
-<div class="row">
-  <div class="col-md-6"> 
-    <h3>Phone</h3>
-    <p><%= number_to_phone 555773345 %></p>
-    <h3>Ofice address:</h3>
-    <p>Milkowskiego 3, Kraków, Poland</p>
-    
-    <h3>Email</h3>
-    <p>
-      <a href="mailto:ms@spoton.pl?subject=PortfolioContact" "email me">Email me</a>
-    </p>
-  </div>
-  <div class="col-md-6"> 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.1471041006985!2d19.917737415638285!3d50.02733932564234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165c9a08d6b727%3A0x668e852667c7353c!2sZygmunta+Mi%C5%82kowskiego+3%2C+30-349+Krak%C3%B3w!5e0!3m2!1spl!2spl!4v1503520611098" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="row">
+      <div class="col-md-6"> 
+        <h3>Phone</h3>
+        <p><%= number_to_phone 555773345 %></p>
+        <h3>Ofice address:</h3>
+        <p>Milkowskiego 3, Kraków, Poland</p>
+        
+        <h3>Email</h3>
+        <p>
+          <a href="mailto:ms@spoton.pl?subject=PortfolioContact" "email me">Email me</a>
+        </p>
+      </div>
+      <div class="col-md-6"> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.1471041006985!2d19.917737415638285!3d50.02733932564234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165c9a08d6b727%3A0x668e852667c7353c!2sZygmunta+Mi%C5%82kowskiego+3%2C+30-349+Krak%C3%B3w!5e0!3m2!1spl!2spl!4v1503520611098" width="350" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
-
