Update about page to have collapsable components

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,6 +8,51 @@
       </div>
       <div class="col-md-8">
         <p>Some really interesting information about me</p>
+
+        <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded="false"
+            aria-controler="jobHistory"
+        >
+          Job history
+        </button>
+        <button
+            class="btn btn-primary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded="false"
+            aria-controler="education"
+          >
+            Education
+          </button>
+        <p>
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              job 1
+            </div>
+            <div class="card card-block">
+              job 2
+            </div>
+            <div class="card card-block">
+              job 3
+            </div>
+          </div>
+           <div class="collapse" id="education">
+            <div class="card card-block">
+              School 1
+            </div>
+            <div class="card card-block">
+              School 2
+            </div>
+            <div class="card card-block">
+              School 3
+            </div>
+          </div>
+        </p>
       </div>
     </div>
   </div>
