Integrated custom fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,14 +27,24 @@ a:hover {
  * Base structure
  */
 
+
 html,
 body {
   height: 100%;
 }
 body {
+  font-family: 'Raleway', sans-serif;
   color: #fff;
   text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+
+h1, .h1,
+h2, ,h2,
+h3, .h3,
+h4, .h4
+{
+  font-family: 'Playfair Display', serif;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
