--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -4,6 +4,15 @@
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
+  font-family: 'Raleway', sans-serif;
+}
+
+h1, .h1,
+h2, ,h2,
+h3, .h3,
+h4, .h4
+{
+  font-family: 'Playfair Display', serif;
 }
 
 .navbar {
